# salt-chemistry-skill

./: README.md  SKILL.md  environment.frontier.yml  install_frontier_rocm_stack.sh  pyproject.toml
examples/: README.md  output_npt.out
reference/: hpc_frontier.md  methodology.md  outputs.md
saltmd/: __init__.py  analysis.py  composition.py  presets.py  simulation.py  structure.py
scripts/: analyze_density.py  build_structure.py  make_campaign.py  plot_results.py  run_npt.py  run_openmm_onegpu.sh
templates/: config.example.yaml  frontier_env.sh  submit_campaign.sbatch  submit_frontier.sbatch
tests/: test_analysis.py  test_composition.py  test_mixture.py  test_model_guard.py  test_structure.py
